--- a/playbook.yml
+++ b/playbook.yml
@@ -1,4 +1,15 @@
 ---
 - hosts: all
+     
+  vars_files:
+  - vars/main.yml
+  
   roles:
-    - gateway
+    -  {  role: gateway,  when: '"kalem-gateway" in inventory_hostname' }
+   
+  tasks:
+    - name: run dhcp task file
+      include_tasks: tasks/main.yml
+      when: "{{ 'kalem-dhcp' in inventory_hostname }}"
+
+
