--- a/molecule/cluster/molecule.yml
+++ b/molecule/cluster/molecule.yml
@@ -37,7 +37,7 @@ platforms:
       - name: kalem # is a port group to be assigned to an instance
         ip: 10.0.0.2
         netmask: 255.255.255.0
-    group: kalem-dhcp
+    group: app
   - name: kalem-gateway # is an instance name
     template: RHEL79-Thin # is to be used as a template when cloning an instance
     #resource_pool: change me to resource pool
@@ -51,9 +51,27 @@ platforms:
         start_connected: true
         connected: true
       - name: kalem # is a port group to be assigned to an instance
-        ip: 10.0.0.2
-        netmask: 255.255.255.0
-    group: kalem-gateway
+        type: dhcp
+        start_connected: true
+        connected: true
+    group: app
+  - name: kalem-dns # is an instance name
+    template: RHEL79-Thin # is to be used as a template when cloning an instance
+    #resource_pool: change me to resource pool
+    #snapshot_src: change me to snapshot name # is a snapshot name to be possible specified if you want to use linked clone.
+    hardware:
+      num_cpus: 2 # is cpu number to be configured to an instance
+      memory_mb: 2048 # is memory size(MB) to be configured to an instance
+    networks:
+      - name: VM Network # is a port group to be assigned to an instance
+        type: dhcp
+        start_connected: true
+        connected: true
+      - name: kalem # is a port group to be assigned to an instance
+        type: dhcp
+        start_connected: true
+        connected: true
+    group: app
 provisioner:
   name: ansible
   env:
@@ -62,3 +80,4 @@ provisioner:
     converge: ${MOLECULE_PLAYBOOK:-converge.yml}
 verifier:
   name: ansible
+
