--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -13,31 +13,32 @@
     ansible.builtin.blockinfile:
       path: /etc/dhcp/dhcpd.conf 
       block: |
-        option domain-name "{{DOMAIN_NAME}}"; 
+        option domain-name "{{ DOMAIN_NAME }}"; 
         default-lease-time	86400;  
         max-lease-time 172800; 
         ddns-update-style none;
         authoritative;
-        subnet {{SUBNET}} netmask 255.255.255.0 { 
-        range {{RANGE}};  
+        subnet {{ SUBNET }} netmask 255.255.255.0 { 
+        range {{ RANGE }};  
         option subnet-mask 255.255.255.0; 
-        option routers "{{OPTION_ROUTERS}}";   
-        option domain-name "{{DOMAIN_NAME}}";  
-        option domain-search "{{DOMAIN_NAME}}"; 
-        option domain-name-servers {{DNS}}; 
+        option routers {{ GW_IP }};   
+        option domain-name "{{ DOMAIN_NAME }}";  
+        option domain-search "{{ DOMAIN_NAME }}"; 
+        option domain-name-servers {{ DNS_IP }}; 
         }
         host gateway-node {
-          hardware ethernet {{ GW_MAC }}
+          hardware ethernet {{ GW_MAC }};
           fixed-address {{ GW_IP }};    
         }
         host dhcp-node {
-          hardware ethernet {{ DHCP_MAC }}
+          hardware ethernet {{ DHCP_MAC }};
           fixed-address {{ DHCP_IP }};    
         }
         host dns-node {
-          hardware ethernet {{ DNS_MAC }}
+          hardware ethernet {{ DNS_MAC }};
           fixed-address {{ DNS_IP }};    
         }
+        
         
   - name: start dhcpd
     command: systemctl start dhcpd.service
@@ -55,7 +56,7 @@
       path: /etc/sysconfig/network-scripts/ifcfg-{{in_interface}}
       block: |
         DEFROUTE=yes
-        GATEWAY={{ hostvars['kalem-gateway'].ansible_ens224.ipv4.address }};
+        GATEWAY={{GW_IP}};
         DOMAIN={{DOMAIN_NAME}}; 
   #  GATEWAY={{ hostvars['gateway'].ansible_host }} 
   # DNS1={{{ hostvars['dns'].ansible_host }}         
