--- a/molecule/cluster/molecule.yml
+++ b/molecule/cluster/molecule.yml
@@ -22,7 +22,7 @@ driver:
   #winrm_server_cert_validation: ignore # is the server certificate validation mode
   # The below list is possible to define DNS nameservers
 platforms:
-  - name: kalem-dhcp # is an instance name
+  - name: dhcp # is an instance name
     template: RHEL79-Thin # is to be used as a template when cloning an instance
     #resource_pool: change me to resource pool
     #snapshot_src: change me to snapshot name # is a snapshot name to be possible specified if you want to use linked clone.
@@ -38,7 +38,7 @@ platforms:
         ip: 10.0.0.2
         netmask: 255.255.255.0
     group: app
-  - name: kalem-gateway # is an instance name
+  - name: gateway # is an instance name
     template: RHEL79-Thin # is to be used as a template when cloning an instance
     #resource_pool: change me to resource pool
     #snapshot_src: change me to snapshot name # is a snapshot name to be possible specified if you want to use linked clone.
@@ -51,11 +51,10 @@ platforms:
         start_connected: true
         connected: true
       - name: kalem # is a port group to be assigned to an instance
-        type: dhcp
-        start_connected: true
-        connected: true
+        ip: 10.0.0.1
+        netmask: 255.255.255.0
     group: app
-  - name: kalem-dns # is an instance name
+  - name: dns-primary # is an instance name
     template: RHEL79-Thin # is to be used as a template when cloning an instance
     #resource_pool: change me to resource pool
     #snapshot_src: change me to snapshot name # is a snapshot name to be possible specified if you want to use linked clone.
@@ -68,9 +67,8 @@ platforms:
         start_connected: true
         connected: true
       - name: kalem # is a port group to be assigned to an instance
-        type: dhcp
-        start_connected: true
-        connected: true
+        ip: 10.0.0.3
+        netmask: 255.255.255.0
     group: app
 provisioner:
   name: ansible
