--- a/molecule/cluster/molecule.yml
+++ b/molecule/cluster/molecule.yml
@@ -47,9 +47,8 @@ platforms:
       memory_mb: 2048 # is memory size(MB) to be configured to an instance
     networks:
       - name: VM Network # is a port group to be assigned to an instance
-        type: dhcp
-        start_connected: true
-        connected: true
+        ip: 192.168.7.52 
+        netmask: 255.255.255.0 
       - name: kalem # is a port group to be assigned to an instance
         ip: 10.0.0.1
         netmask: 255.255.255.0
